Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33623

Partitioning is broken on big endian architectures

    XMLWordPrintable

Details

    Description

      A recent push into 10.6 that included the following introduced a massive amount of test failures on s390x, which I believe is currently the only big endian target architecture on buildbot.mariadb.org:

      f1c615ec181 Fixed failure in test connect.drop-open-error for embedded server
      89aae15da2e Fixed crash in connect.misc with embedded server
      0c079f4f76d Updated test cases result for s3.parition
      b5d65fc105b Optimize performance of my_bitmap
      d4e1731fbc5 Optimize handler_stats_disable() when handler_stats are already disabled
      a8f6b86c905 Have ha_partition ignore HA_EXTRA..CHILDREN extra() calls if no myisamrg
      

      The third one from the bottom is MDEV-33502, which I suspect to be the culprit.

      Attachments

        Issue Links

          Activity

            People

              monty Michael Widenius
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 5.25h
                  5.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.